<resources>
    <string name="app_name" translatable="false">CinA</string>
    <string name="invalid_project_file_selecting">Invalid project file selected</string>
    <string name="compiler_setup_exception">Couldn\'t setup compiler, maybe not enough space left in device</string>
    <string name="remove_project">Remove project\u0020</string>
    <string name="invalid_project_name">Invalid project name</string>
    <string name="start_activity_title">C/C++ IDE</string>
    <string name="project_create_error">Couldn\'t create project, maybe not enough space left in device</string>
    <string name="back_for_exit">Press back again</string>
    <string name="invalid_source_file">Invalid source file\u0020</string>
    <string name="project_name_show">Project name:\u0020</string>
    <string name="project_description_show">Description:\u0020</string>
    <string name="project_language_show">Language:\u0020</string>
    <string name="project_files_show">Files:\u0020</string>
    <string name="failed_build_status">Build state: Failed</string>
    <string name="success_build_status">Build state: Success</string>
    <string name="save_successful">Saved successfully</string>
    <string name="save_failed">Couldn\'t save file</string>
    <string name="not_compiled_project">Project is not compiled yet</string>
    <string name="no_user_login">We couldn\'t found Info about user account, Please connect Internet and try again
    </string>
    <string name="invalid_user">Your account has been expired, Upgrade your account please</string>
    <string name="run_compiled_file_error">Couldn\'t run compiled file, maybe not enough space left in device</string>
    <string name="permission_error">Can\'t read folder,Permission Error</string>
    <string name="permission_error1">Permission dined\u0020</string>
    <string name="permission_error2">Can\'t read file,Permission Error</string>
    <string name="directory_not_exist_error">Directory doesn\'t exists</string>
    <string name="dir_only_error">Only directories allowed</string>
    <string name="get_new_file_name">Enter file name</string>
    <string name="get_new_folder_name">Enter folder name</string>
    <string name="delete_file">Delete file\u0020</string>
    <string name="unknown_error">Unknown error\u0020</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="invalid_file_name">Invalid file name</string>
    <string name="error">Error:\u0020</string>
    <string name="too_long_name">Too long name:\u0020</string>
    <string name="project_structure_error">Invalid project structure</string>
    <string name="project_error">Error found in a project:\u0020</string>
    <string name="Save">Save</string>
    <string name="Compile">Compile</string>
    <string name="Run">Run</string>
    <string name="Close">Close</string>
    <string name="Browse_files">Browse files</string>
    <string name="Open_project">Open project</string>
    <string name="Setting">Setting</string>
    <string name="About_us">About us</string>
    <string name="Rate_us">Rate us</string>
    <string name="run_layout_project_output_hint">Project:~$</string>
    <string name="run_layout_user_input_hint">User:~$</string>
    <string name="loading_layout">Loading…</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="create_button_text">Create</string>
    <string name="delete_button_text">Delete</string>
    <string name="create_project_button_text">Create project</string>
    <string name="create_cpp_project_button_text">C++ project</string>
    <string name="create_c_project_button_text">C project</string>
    <string name="project_name_create_project">Project name</string>
    <string name="project_description_create_project">Project description(Optional)</string>
    <string name="browse_files_label">Browse files</string>
    <string name="language_label">Language</string>
    <string name="theme_label">Theme</string>
    <string name="c_compile_params_hint">C compile params</string>
    <string name="cpp_compile_params_hint">C++ compile params</string>
    <string name="Upgrade_account">Upgrade account</string>
    <string name="need_bazaar">You need cafe bazaar to complete this action</string>
    <string name="c_param_helper">These params will use when you compile a C project</string>
    <string name="cpp_param_helper">These params will use when you compile a C++ project</string>
    <string name="splash_text">In Android</string>
    <string name="purchase_error">Error while purchase item</string>
    <string name="activating_account">Your activated successfully</string>
    <string name="activating_error">Unknown error occurred</string>
    <string name="active_account">Your is active now,\nYou can purchase when your account deactivate</string>
    <string name="wait_activating">Item purchase successfully,\nPlease wait until we active it</string>
    <string name="expite_at">Expires on:\u0020</string>
    <string name="unknown_account">Unknown account</string>
</resources>
