<?xml version="1.0" encoding="utf-8"?>
<com.rey.material.widget.LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@color/colorPrimary"
        android:showDividers="middle">

    <com.rey.material.widget.Spinner
            android:id="@+id/lang_spinner_setting_layout"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:visibility="gone"
            style="@style/Material.Widget.Spinner"
            app:rd_style="@style/Material.Drawable.Ripple.Wave"
            app:spn_label="@string/language_label"
            app:spn_labelEnable="true"
            app:spn_labelTextColor="@color/colorAccent"
            app:spn_labelTextSize="12sp"
            app:spn_dividerColor="@color/colorAccent"
            app:spn_dividerAnimDuration="1"
            app:spn_arrowSwitchMode="true"
            app:spn_arrowAnimDuration="1"
            app:spn_arrowAnimClockwise="true"
            app:spn_arrowColor="@color/colorPrimary"
    />

    <com.rey.material.widget.Spinner
            android:id="@+id/theme_spinner_setting_layout"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            style="@style/Material.Widget.Spinner"
            app:rd_style="@style/Material.Drawable.Ripple.Wave"
            app:spn_label="@string/theme_label"
            app:spn_labelEnable="true"
            app:spn_labelTextColor="@color/colorAccent"
            app:spn_labelTextSize="12sp"
            app:spn_dividerColor="@color/colorAccent"
            app:spn_dividerAnimDuration="1"
            app:spn_arrowSwitchMode="true"
            app:spn_arrowAnimDuration="1"
            app:spn_arrowAnimClockwise="true"
            app:spn_arrowColor="@color/colorPrimary"
    />

    <com.rey.material.widget.EditText
            android:id="@+id/c_compile_params_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:hint="@string/c_compile_params_hint"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorAccent"
            app:et_labelTextSize="10dp"
            app:et_supportMode="helper"
            app:et_helper="These params will use when you compile a C project"
            app:et_supportTextColor="@color/colorPrimary"
            app:et_supportTextSize="12sp"
            app:et_supportPadding="5dp"
            android:theme="@style/Material.Widget.EditText"
    />

    <com.rey.material.widget.EditText
            android:id="@+id/cpp_compile_params_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:hint="@string/cpp_compile_params_hint"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorAccent"
            app:et_labelTextSize="10dp"
            app:et_supportMode="helper"
            app:et_helper="These params will use when you compile a C++ project"
            app:et_supportTextColor="@color/colorPrimary"
            app:et_supportTextSize="12sp"
            app:et_supportPadding="5dp"
            android:theme="@style/Material.Widget.EditText"
    />
</com.rey.material.widget.LinearLayout>